atg/torch_wrapper_gen.odin

	atg_adaptive_max_pool2d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_max_pool2d_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, indices: Tensor) ---
	atg_adaptive_max_pool2d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, self: Tensor, indices: Tensor) ---
	atg_adaptive_max_pool2d_out :: proc(out: ^Tensor, indices: Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_max_pool3d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_max_pool3d_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, indices: Tensor) ---
	atg_adaptive_max_pool3d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, self: Tensor, indices: Tensor) ---
	atg_adaptive_max_pool3d_out :: proc(out: ^Tensor, indices: Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_add :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_add_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_add_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_add_scalar :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_add_scalar_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_add_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_addbmm :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor) ---
	atg_addbmm_ :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor) ---
	atg_addbmm_out :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor) ---
	atg_addcdiv :: proc(out: ^Tensor, self: Tensor, tensor1: Tensor, tensor2: Tensor) ---
	atg_addcdiv_ :: proc(out: ^Tensor, self: Tensor, tensor1: Tensor, tensor2: Tensor) ---
	atg_addcdiv_out :: proc(out: ^Tensor, self: Tensor, tensor1: Tensor, tensor2: Tensor) ---
	atg_addcmul :: proc(out: ^Tensor, self: Tensor, tensor1: Tensor, tensor2: Tensor) ---
	atg_addcmul_ :: proc(out: ^Tensor, self: Tensor, tensor1: Tensor, tensor2: Tensor) ---
	atg_addcmul_out :: proc(out: ^Tensor, self: Tensor, tensor1: Tensor, tensor2: Tensor) ---
	atg_addmm :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor) ---
	atg_addmm_ :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor) ---
	atg_addmm_dtype :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor, out_dtype: c.int) ---
	atg_addmm_dtype_out :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor, out_dtype: c.int) ---
	atg_addmm_out :: proc(out: ^Tensor, self: Tensor, mat1: Tensor, mat2: Tensor) ---
	atg_addmv :: proc(out: ^Tensor, self: Tensor, mat: Tensor, vec: Tensor) ---
	atg_addmv_ :: proc(out: ^Tensor, self: Tensor, mat: Tensor, vec: Tensor) ---
	atg_addmv_out :: proc(out: ^Tensor, self: Tensor, mat: Tensor, vec: Tensor) ---
	atg_addr :: proc(out: ^Tensor, self: Tensor, vec1: Tensor, vec2: Tensor) ---
	atg_addr_ :: proc(out: ^Tensor, self: Tensor, vec1: Tensor, vec2: Tensor) ---
	atg_addr_out :: proc(out: ^Tensor, self: Tensor, vec1: Tensor, vec2: Tensor) ---
	atg_adjoint :: proc(out: ^Tensor, self: Tensor) ---
	atg_affine_grid_generator :: proc(out: ^Tensor, theta: Tensor, size_data: [^]i64, size_len: c.int, align_corners: c.int) ---
	atg_affine_grid_generator_backward :: proc(out: ^Tensor, grad: Tensor, size_data: [^]i64, size_len: c.int, align_corners: c.int) ---
	atg_affine_grid_generator_out :: proc(out: ^Tensor, theta: Tensor, size_data: [^]i64, size_len: c.int, align_corners: c.int) ---
	atg_alias :: proc(out: ^Tensor, self: Tensor) ---
	atg_alias_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg_alias_copy_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_align_as :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_all :: proc(out: ^Tensor, self: Tensor) ---
	atg_all_all_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_all_dim :: proc(out: ^Tensor, self: Tensor, dim: i64, keepdim: c.int) ---
	atg_all_dims :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_all_dims_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_all_out :: proc(out: ^Tensor, self: Tensor, dim: i64, keepdim: c.int) ---
	atg_alpha_dropout :: proc(out: ^Tensor, input: Tensor, p: f64, train: c.int) ---
	atg_alpha_dropout_ :: proc(out: ^Tensor, self: Tensor, p: f64, train: c.int) ---
	atg_amax :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_amax_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_amin :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_amin_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_aminmax :: proc(out: ^Tensor, self: Tensor, dim_v: i64, dim_null: rawptr, keepdim: c.int) ---
	atg_aminmax_out :: proc(out: ^Tensor, min: Tensor, max: Tensor, self: Tensor, dim_v: i64, dim_null: rawptr, keepdim: c.int) ---
	atg_angle :: proc(out: ^Tensor, self: Tensor) ---
	atg_angle_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_any :: proc(out: ^Tensor, self: Tensor) ---
	atg_any_all_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_any_dim :: proc(out: ^Tensor, self: Tensor, dim: i64, keepdim: c.int) ---
	atg_any_dims :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_any_dims_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, keepdim: c.int) ---
	atg_any_out :: proc(out: ^Tensor, self: Tensor, dim: i64, keepdim: c.int) ---
	atg_arange :: proc(out: ^Tensor, end: Scalar, options_kind: c.int, options_device: c.int) ---
	atg_arange_start :: proc(out: ^Tensor, start: Scalar, end: Scalar, options_kind: c.int, options_device: c.int) ---
	atg_arange_start_step :: proc(out: ^Tensor, start: Scalar, end: Scalar, step: Scalar, options_kind: c.int, options_device: c.int) ---
	atg_arccos :: proc(out: ^Tensor, self: Tensor) ---
	atg_arccos_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_arccos_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_arccosh :: proc(out: ^Tensor, self: Tensor) ---
	atg_arccosh_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_arccosh_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_arcsin :: proc(out: ^Tensor, self: Tensor) ---
	atg_arcsin_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_arcsin_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_arcsinh :: proc(out: ^Tensor, self: Tensor) ---
	atg_arcsinh_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_arcsinh_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_arctan :: proc(out: ^Tensor, self: Tensor) ---
	atg_arctan2 :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_arctan2_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_arctan2_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_arctan_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_arctan_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_arctanh :: proc(out: ^Tensor, self: Tensor) ---
	atg_arctanh_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_arctanh_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_argmax :: proc(out: ^Tensor, self: Tensor, dim_v: i64, dim_null: rawptr, keepdim: c.int) ---
	atg_argmax_out :: proc(out: ^Tensor, self: Tensor, dim_v: i64, dim_null: rawptr, keepdim: c.int) ---
	atg_argmin :: proc(out: ^Tensor, self: Tensor, dim_v: i64, dim_null: rawptr, keepdim: c.int) ---
	atg_argmin_out :: proc(out: ^Tensor, self: Tensor, dim_v: i64, dim_null: rawptr, keepdim: c.int) ---
	atg_argsort :: proc(out: ^Tensor, self: Tensor, dim: i64, descending: c.int) ---
	atg_argsort_stable :: proc(out: ^Tensor, self: Tensor, stable: c.int, dim: i64, descending: c.int) ---
	atg_argsort_stable_out :: proc(out: ^Tensor, self: Tensor, stable: c.int, dim: i64, descending: c.int) ---
	atg_argwhere :: proc(out: ^Tensor, self: Tensor) ---
	atg_as_strided :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, storage_offset_v: i64, storage_offset_null: rawptr) ---
	atg_as_strided_ :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, storage_offset_v: i64, storage_offset_null: rawptr) ---
	atg_as_strided_copy :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, storage_offset_v: i64, storage_offset_null: rawptr) ---
	atg_as_strided_copy_out :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, storage_offset_v: i64, storage_offset_null: rawptr) ---
	atg_as_strided_scatter :: proc(out: ^Tensor, self: Tensor, src: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, storage_offset_v: i64, storage_offset_null: rawptr) ---
	atg_as_strided_scatter_out :: proc(out: ^Tensor, self: Tensor, src: Tensor, size_data: [^]i64, size_len: c.int, stride_data: [^]i64, stride_len: c.int, storage_offset_v: i64, storage_offset_null: rawptr) ---
	atg_asin :: proc(out: ^Tensor, self: Tensor) ---
	atg_asin_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_asin_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_asinh :: proc(out: ^Tensor, self: Tensor) ---
	atg_asinh_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_asinh_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_atan :: proc(out: ^Tensor, self: Tensor) ---
	atg_atan2 :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_atan2_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_atan2_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_atan_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_atan_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_atanh :: proc(out: ^Tensor, self: Tensor) ---
	atg_atanh_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_atanh_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_atleast_1d :: proc(out: ^Tensor, self: Tensor) ---
	atg_atleast_2d :: proc(out: ^Tensor, self: Tensor) ---
	atg_atleast_3d :: proc(out: ^Tensor, self: Tensor) ---
	atg_avg_pool1d :: proc(out: ^Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int) ---
	atg_avg_pool1d_out :: proc(out: ^Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int) ---
	atg_avg_pool2d :: proc(out: ^Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_avg_pool2d_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_avg_pool2d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_avg_pool2d_out :: proc(out: ^Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
